fix(bootstrap4-theme): 🐛 add wrapping container to center container for banners
changed to use bootstrap container instead of custom css

✅ Closes: 532

--- a/packages/bootstrap4-theme/src/scss/extends/_banners.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_banners.scss
@@ -95,15 +95,6 @@
 }
 
 // Media Queries
-
-@media screen and (min-width: $uds-breakpoint-sm) {
-  .banner {
-    max-width: 1200px;
-    margin: auto;
-  }
-
-}
-
 .banner {
   // Mobile tweaks. 576px
   @media screen and (max-width: $uds-breakpoint-sm) {
